[package]
name = "servicer"
authors = ["Shardul Aeer <aeershardul@gmail.com>"]
description = "Simplify Service Management on systemd"
version = "0.1.14"
edition = "2021"
license = "MIT"
homepage = "https://servicer.dev"
repository = "https://github.com/servicer-labs/servicer"
keywords = ["systemd", "dbus", "service", "process"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", default-features = false, features = ["std", "derive"] }
cli-table = {version = "0.4", default-features = false, features = ["derive"] }

tempfile = {version = "3.14", default-features = false}
regex = {version = "1.11", default-features = false}
indoc = {version = "2.0", default-features = false}

tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros"] }
zbus = { version = "5.1", default-features = false, features = ["tokio"] } 
zbus_macros = "5.1"

bytesize = "1.3"
libc = "0.2"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
debug = 0
strip = true

panic = "abort"
debug-assertions = false
overflow-checks = false
